--- a/client/index.html
+++ b/client/index.html
@@ -2,7 +2,9 @@
 <html lang="fr">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/x-icon" href="./src/assets/Logo/AESF.ico" />
+    <link rel="icon" type="image/x-icon" href="./src/assets/icon.jpg" />
+    <meta name="description" content="Publiez vos plus beaux messages de Saint Valentin !">
+    <meta name="author" content="Ryan DECIAN">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Cupidon Express</title>
   </head>
